--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+:root {
+  --amplify-primary-color: #0083e8;
+  --amplify-primary-tint: #006ec2;
+  --amplify-primary-shade: #006ec2;
+}
+
 html,
 body {
   padding: 0;
